# marcia-patricia-tree

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: cmake-multi-platform.yml
include/: some.h
include/merkle-patricia-tree/common/: base.hpp  bytes.hpp  bytes_to_string.hpp  decoding_result.hpp  empty_hashes.hpp  endian.hpp  util.hpp
include/merkle-patricia-tree/rlp/: decode.hpp  decode_vector.hpp  encode.hpp  encode_vector.hpp
include/merkle-patricia-tree/rpl/: decode.hpp  decode_vector.hpp  encode.hpp  encode_vector.hpp
include/merkle-patricia-tree/trie/: hash_builder.hpp  nibbles.hpp  node.hpp  prefix_set.hpp  some.h  vector_root.hpp
include/merkle-patricia-tree/types/: evmc_bytes32.hpp
src/: some.cpp
src/common/: assert.cpp  base.cpp  base.hpp  bytes.cpp  bytes_to_string.cpp  bytes_to_string.hpp  empty_hashes.cpp  endian.cpp  endian.hpp  util.cpp  util.hpp
src/rlp/: decode.cpp  decode.hpp  decode_vector.hpp  encode.cpp  encode.hpp  encode_vector.hpp
src/trie/: hash_builder.cpp  hash_builder.hpp  nibbles.cpp  node.cpp  node.hpp  prefix_set.cpp  prefix_set.hpp  some.cpp  vector_root.cpp  vector_root.hpp
src/types/: evmc_bytes32.cpp
tests/: CMakeLists.txt
tests/common/: bytes_test.cpp  empty_hashes_test.cpp
tests/rlp/: decode_test.cpp  encode_test.cpp
tests/rpl/: decode_test.cpp
tests/trie/: hash_builder_test.cpp  nibbles_test.cpp  nibbles_wrappers_test.cpp  node_test.cpp  prefix_set_test.cpp  vector_root_test.cpp
